sanger/sites/single-cell-atlas-cvid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single-cell-atlas-cvid
spec:
  selector:
    matchLabels:
      app: single-cell-atlas-cvid
  replicas: 1
  template:
    metadata: 
      name: single-cell-atlas-cvid
      labels:
        app: single-cell-atlas-cvid
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: single-cell-atlas-cvid
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/single-cell-atlas-cvid/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single-cell-atlas-cvid-ss2
spec:
  selector:
    matchLabels:
      app: single-cell-atlas-cvid-ss2
  replicas: 1
  template:
    metadata: 
      name: single-cell-atlas-cvid-ss2
      labels:
        app: single-cell-atlas-cvid-ss2
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: single-cell-atlas-cvid-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: single-cell-atlas-cvid-ss2
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_SS2_cellxgene.h5ad", "-t", "steady_state_B_cells_Smart-seq2", "--host", "0.0.0.0", "--port", "5005", "--annotations-file", "/data/annotations-ss2.csv"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: single-cell-atlas-cvid-10x
spec:
  selector:
    matchLabels:
      app: single-cell-atlas-cvid-10x
  replicas: 1
  template:
    metadata: 
      name: single-cell-atlas-cvid-10x
      labels:
        app: single-cell-atlas-cvid-10x
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: single-cell-atlas-cvid-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.15.0
        imagePullPolicy: IfNotPresent
        name: single-cell-atlas-cvid-10x
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/adata_10X_activation_cellxgene.h5ad", "-t", "activated_PBMC_10X", "--host", "0.0.0.0", "--port", "5005", "--annotations-file", "/data/annotations-10x.csv"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
