sanger/sites/single-cell-atlas-cvid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: single-cell-atlas-cvid
  labels:
    app: single-cell-atlas-cvid
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: single-cell-atlas-cvid
---
apiVersion: v1
kind: Service
metadata:
  name: single-cell-atlas-cvid-ss2
  labels:
    app: single-cell-atlas-cvid-ss2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: single-cell-atlas-cvid-ss2
---
apiVersion: v1
kind: Service
metadata:
  name: single-cell-atlas-cvid-10x
  labels:
    app: single-cell-atlas-cvid-10x
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: single-cell-atlas-cvid-10x
---
apiVersion: v1
kind: Service
metadata:
  name: cvid-revision-bcells
  labels:
    app: cvid-revision-bcells
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cvid-revision-bcells
---
