sanger/sites/single-cell-atlas-cvid/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: single-cell-atlas-cvid
spec:
  virtualhost:
    fqdn: single-cell-atlas-cvid.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: single-cell-atlas-cvid
          port: 80
    - match: /static
      services:
        - name: single-cell-atlas-cvid-ss2
          port: 80
    - match: /ss2
      prefixRewrite: "/" 
      services:
        - name: single-cell-atlas-cvid-ss2
          port: 80
    - match: /10x
      prefixRewrite: "/" 
      services:
        - name: single-cell-atlas-cvid-10x
          port: 80
    - match: /revision-bcells
      prefixRewrite: "/" 
      services:
        - name: cvid-revision-bcells
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: cvidcellatlas
spec:
  virtualhost:
    fqdn: www.cvidcellatlas.org
  routes:
    - match: /
      services:
        - name: single-cell-atlas-cvid
          port: 80
    - match: /static
      services:
        - name: single-cell-atlas-cvid-ss2
          port: 80
    - match: /ss2
      prefixRewrite: "/" 
      services:
        - name: single-cell-atlas-cvid-ss2
          port: 80
    - match: /10x
      prefixRewrite: "/" 
      services:
        - name: single-cell-atlas-cvid-10x
          port: 80
    - match: /revision-bcells
      prefixRewrite: "/" 
      services:
        - name: cvid-revision-bcells
          port: 80
---
